--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,25 @@
     </style>
 
     <style name="TutorialText" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:textSize">32dp</item>
+        <item name="android:textSize">40dp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:textColor">#ff0000</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+    
+    <style name="buttonNext">
+        <item name="android:textSize">17dp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:background">#f7f7f7</item>
+        <item name="android:textColor">#ff0000</item>
+        <item name="android:topRightRadius">50dp</item>
+        <item name="android:topLeftRadius">5dp</item>
+        <item name="android:bottomRightRadius">5dp</item>
+        <item name="android:bottomLeftRadius">5dp</item>
     </style>
 
 </resources>
