--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentStart="true" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinner1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:entries="@array/array_languages"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="@string/buttonSumbit"
         android:id="@+id/button"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="47dp"
         style="@style/buttonNext"
         android:layout_below="@+id/spinner2"
         android:layout_centerHorizontal="true" />
