--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -57,4 +57,11 @@
         android:id="@+id/output"
         android:editable="false"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose language"
+        android:id="@+id/choose_lang"
+        android:layout_below="@+id/output"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
