style three activity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
     </style>
     
     <style name="buttonNext">
-        <item name="android:textSize">17dp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:background">#f7f7f7</item>
         <item name="android:textColor">#ff0000</item>
@@ -26,5 +26,17 @@
         <item name="android:bottomRightRadius">5dp</item>
         <item name="android:bottomLeftRadius">5dp</item>
     </style>
+
+    <style name="TextView">
+        <item name="android:textColor">#ff0000</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+
+    <style name="EditText">
+        <item name="android:hint">Enter the text</item>
+    </style>
+
 
 </resources>
