--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -76,7 +76,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Поменять языки"
+        android:text="Выбрать языки"
         android:id="@+id/choose_lang"
         android:layout_below="@+id/output"
         android:layout_centerHorizontal="true"
